# ContextAgent

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
agentz/agent/: __init__.py  agent.py  base.py  executor.py  patterns.py  tracker.py
agentz/artifacts/: artifact_writer.py
agentz/context/: base_context_module.py  base_unit.py  context.py  conversation.py  utils.py
agentz/profiles/: base.py
agentz/runner/: __init__.py  executor.py  patterns.py
agentz/tools/: __init__.py
agentz/utils/: __init__.py  helpers.py  parsers.py
contextagent/: __init__.py
contextagent/agent/: __init__.py  agent.py  executor.py  tracker.py
contextagent/artifacts/: __init__.py  artifact_writer.py  reporter.py  terminal_writer.py
contextagent/context/: __init__.py  context.py  conversation.py  data_store.py
contextagent/llm/: llm_setup.py
contextagent/mcp/: manager.py  patches.py
contextagent/profiles/: base.py
contextagent/utils/: __init__.py  config.py  parsers.py  printer.py
docs/: changelog.md  faq.md  index.md  quickstart.md
docs/concepts/: agent-lifecycle.md  architecture.md  context-engine.md  tooling.md
docs/examples/: index.md
docs/guides/: custom-tool.md  deployment.md  pipeline-orchestration.md
docs/includes/: cta.md  feature-grid.md  hero.md
examples/: data_science_relative.py  simple.py  simple_web.py  web_researcher.py
frontend/: app.py  streaming_printer.py
gui/: QUICKSTART.md  README.md  app.py  start.sh  streaming_printer.py
gui2/: app.py
pipelines/: __init__.py  base.py  browser_mcp.py  data_scientist.py  simple.py  simple_web.py  vanilla_chat.py  web_researcher.py  web_searcher.py
(+71 files in other folders)
