[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-agent"
version = "0.1.0"
description = "A Research-Oriented Multi-Agent System Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Zhimeng Guo", email = "gzjz07@outlook.com"}
]
keywords = ["agent", "multi-agent", "ai", "llm", "research", "machine-learning", "autonomous-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "build>=1.3.0",
    "flask>=3.1.2",
    "google-generativeai>=0.8.5",
    "ipdb>=0.13.13",
    "litellm==1.76",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai-agents>=0.3.2",
    "pandas>=2.3.3",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "twine>=6.2.0",
    "weave>=0.52.8",
]

[project.urls]
Homepage = "https://github.com/TimeLovercc/agentz"
Repository = "https://github.com/TimeLovercc/agentz"
Documentation = "https://github.com/TimeLovercc/agentz#readme"
"Bug Tracker" = "https://github.com/TimeLovercc/agentz/issues"

[tool.setuptools.packages.find]
include = ["agentz*", "pipelines*"]
exclude = ["examples*", "data*", "outputs*", "experience*"]
